solution-part-1/products-db-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: products-db
spec:
  serviceName: "products-db"
  replicas: 2
  selector:
    matchLabels:
      app: products-db
  template:
    metadata:
      labels:
        app: products-db
    spec:
      containers:
      - name: postgres
        image: widgetario/products-db:postgres-replicated
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgres-data
          mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
  - metadata:
      name: postgres-data
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 10Gi
