solution-part-1/stock-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stock-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: stock-api
  template:
    metadata:
      labels:
        app: stock-api
    spec:
      containers:
      - name: stock-api
        image: widgetario/stock-api:21.03
        ports:
        - containerPort: 8080
